fix: resolve multiple compilation errors (type mismatches, variable shadowing, and missing injections)